2004-10-18  Ullrich Sigwanz <usigwanz@freesurf.ch>

        * backend/niash_core.c: 
        * backend/niash.c: correcting vertical scanning start 
          point for changed max. page height

2004-10-17  Ullrich Sigwanz <usigwanz@freesurf.ch>

        * backend/niash_core.c: using exact number of lines
          for a scan

---- FEATURE FREEZE FOR SANE 1.0.15 ---
-- snapshot 1.0.15-pre1

2004-10-17  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Olivetti Job-Jet M400.

2004-10-17  Julien Blache <jb@jblache.org>
	* tools/hotplug/libsane.usermap: Added Epson Perfection 2480.

2004-10-16  Karl Heinz Kremer <khk@khk.net>

	* backend/epson_usb.c: Added USB ID for Expression 10000XL

2004-10-16  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* ltmain.sh: backport -framework support from libtool 2.0
	* README.darwin: sane-find-scanner now works for SCSI, so removed
	  statement that said it didn't. More libusb info, and link to libusb
	  patch

2004-10-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* frontend/saned.c: Fixed NULL string crash.
	* README.linux: Added some more details about hotplug and Gentoo
	  problems.
	* NEWS: Updated for 1.0.15.

2004-10-17  Ullrich Sigwanz <usigwanz@freesurf.ch>

        * backend/niash_core.c: rewrote buffer portioning
        * backend/niash_core.c (2): updated debug info 
        * backend/niash.c: Enabling support of full DIN A4 size

2004-10-16  Oliver Rauch <Oliver.Rauch@Rauch-DOmain.DE>

	* backend/umax.c: added default options for Linotype OPAL2

2004-10-15  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added various scanners.
	* po/sane-backends.da.po: Updated Danish translation (from Mogens
	  Jaeger <mogensjaeger@get2net.dk>). 
	
2004-10-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* include/sane/sanei_wire.h sanei/sanei_wire.c: Limit the total
	  amount of memory used for arrays and pointers while decoding the